Text wrap fixed on frind list.

--- a/src/app/components/friend-item/friend-item.component.css
+++ b/src/app/components/friend-item/friend-item.component.css
@@ -46,7 +46,7 @@
 .userItemCurrent{
     height: auto;
     padding: 0.625em;
-    width: 100%;
+    width: 90%;
     margin-top: 0.625em;
     border-radius: 0.063em;
     align-items:flex-start;
